refactor: zero residual principles-audit items (13/13)
- SourceTextCodec: single decoding truth (UTF-8/EUC-KR/MS949, lossy
  flag) replacing five divergent fallbacks; language modules decode via
  codec and lex fromString (UTF-8-only parseFile assumption removed)
- AntlrParseHarness dedupes the five-module lexer/parser wiring;
  UnitBoundaries and AffinityMarkers dedupe locator and dialect scoring;
  ParserSelection consumes LanguageModuleRegistry (single construction)
- Long-method decomposition: recover()/assembleOutcome + UnitOutcome,
  selectBestCandidate, RunCounters, CAstListener declaration split,
  PythonAstListener openAssignedNode, PlSql helpers
- Silent candidate drops now recorded as INVALID_CANDIDATE_EDIT
  evidence; C_KEYWORDS vs COMMON_MEMBER_NAMES split with rationale;
  duplicate Oracle rebase removed; dead writer overload removed;
  what-comments and empty overrides cleaned
- Independently re-verified: suite 107 green; corpus statuses and AST
  inventory hashes byte-identical; deterministic mutation grades
  unchanged (zero wrong repairs); originals untouched

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>